--- a/llp_db/llp_db.vcxproj
+++ b/llp_db/llp_db.vcxproj
@@ -100,6 +100,7 @@
     <ClInclude Include="file_structs.h" />
     <ClInclude Include="query_handler.h" />
     <ClInclude Include="ram_structs.h" />
+    <ClInclude Include="request_structs.h" />
   </ItemGroup>
   <ItemDefinitionGroup />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
