--- a/llp_db/llp_db.vcxproj
+++ b/llp_db/llp_db.vcxproj
@@ -101,7 +101,9 @@
     <ClCompile Include="format_translators.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="Makefile" />
+    <ClCompile Include="printers.c" />
     <ClCompile Include="query_handler.c" />
+    <ClCompile Include="tests.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common_structs.h" />
@@ -110,6 +112,7 @@
     <ClInclude Include="file_structs.h" />
     <ClInclude Include="filters.h" />
     <ClInclude Include="format_translators.h" />
+    <ClInclude Include="printers.h" />
     <ClInclude Include="query_handler.h" />
     <ClInclude Include="ram_structs.h" />
     <ClInclude Include="request_structs.h" />
