normalization in upd and del added

--- a/llp_db/llp_db.vcxproj
+++ b/llp_db/llp_db.vcxproj
@@ -93,6 +93,13 @@
     <RemoteReBuildCommandLine>make rebuild</RemoteReBuildCommandLine>
     <RemoteCleanCommandLine>make clean</RemoteCleanCommandLine>
     <RemoteBuildOutputs>/home/sofia/projects/llp_db/app</RemoteBuildOutputs>
+    <BuildCommandLine>
+    </BuildCommandLine>
+    <ReBuildCommandLine>
+    </ReBuildCommandLine>
+    <CleanCommandLine>
+    </CleanCommandLine>
+    <IncrementalBuild>false</IncrementalBuild>
   </PropertyGroup>
   <ItemGroup>
     <ClCompile Include="common_funcs.c" />
